Remove log4j. Prepare to move ERR2D2W to Wonder.